@@ -104,6 +104,7 @@ if [ ! -f scripts/udev/nut-usbups.rules.in -o \
      ! -f scripts/hotplug/libhid.usermap -o \
      ! -f scripts/upower/95-upower-hid.hwdb -o \
      ! -f scripts/devd/nut-usb.conf.in -o \
+     ! -f scripts/devd/nut-usb.quirks -o \
      ! -f tools/nut-scanner/nutscan-usb.h ] \
 || [ -n "`find drivers -newer scripts/hotplug/libhid.usermap | grep -E '(-hid|nutdrv_qx|usb.*)\.c'`" ] \
 || [ -n "`find drivers -not -newer tools/nut-usbinfo.pl | grep -E '(-hid|nutdrv_qx|usb.*)\.c'`" ] \
