@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3283 utf-8
+personal_ws-1.1 en 3284 utf-8
 AAC
 AAS
 ABI
@@ -2606,6 +2606,7 @@ peasy
 peername
 pem
 perl
+pfSense
 pfexec
 pfy
 ph
