@@ -1,1 +1,2 @@
 nut-usb.conf*
+nut-usb.quirks
