@@ -41,6 +41,9 @@ GENERATED_USB_OS_FILES += $(top_builddir)/scripts/udev/nut-usbups.rules.in
 # BSD devd output file
 GENERATED_USB_OS_FILES += $(top_builddir)/scripts/devd/nut-usb.conf.in
 
+# FreeBSD quirks output file
+GENERATED_USB_OS_FILES += $(top_builddir)/scripts/devd/nut-usb.quirks
+
 # UPower output file
 # Note: unlike others above, this one is currently tracked in Git
 GENERATED_USB_OS_FILES += $(top_builddir)/scripts/upower/95-upower-hid.hwdb
