@@ -64,6 +64,9 @@ https://github.com/networkupstools/nut/milestone/10
      names in configuration snippets generated by `nut-scanner`; practical
      support implemented for USB connected drivers. Library API version
      bumped to 2.3.0 accordingly.
+   * Added generation of FreeBSD/pfSense quirks for USB devices supported
+     by NUT (may get installed to `$datadir` e.g. `/usr/local/share/nut`
+     and need to be pasted into your `/boot/loader.conf.local`). [#2159]
 
  - upsd: Fixed conditions for "no listening interface available" diagnosis
    to check how many listeners we succeeded with, not whether the first one
@@ -71,7 +74,7 @@ https://github.com/networkupstools/nut/milestone/10
    available, default to fail the daemon start-up attempt; support for an
    `ALLOW_NOT_ALL_LISTENERS` setting was added to control this behavior. [#723]
 
-- NUT CI improvements:
+ - NUT CI improvements:
    * Added publishing recipes for PyNUT client bindings for NUT, so it ends
      up in the link:https://pypi.org/project/PyNUTClient[PyPI repository].
      [#2158]
